# data_analysis_agent

./: .gitignore  README.md  app.py  pyproject.toml
spec/data_analysis_agent/: design.md  requirements.md
spec/react_data_agent/: design.md  requirements.md
src/: __init__.py
src/agent/: __init__.py  graph.py  models.py  state.py
src/agent/edges/: __init__.py  route_after_reason.py
src/agent/memory/: __init__.py  loader.py
src/agent/nodes/: __init__.py  reason.py  report.py  run_code.py  update_memory.py
src/agent/tools/: __init__.py  exec_python.py  model_ops.py
